Fixed dropdown in nav bar on portfolio page and contact page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,25 +31,25 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-lg">
       <a class="navbar-brand" href="index.html">Christopher Marti</a>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Links
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Resume</a>
-          <a class="dropdown-item" href="https://github.com/chrisjm093">GitHub</a>
-          <a class="dropdown-item" href="https://www.linkedin.com/in/christopher-m-25246649">LinkedIn</a>
-        </div>
-      </li>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Links
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Resume</a>
+                <a class="dropdown-item" href="https://github.com/chrisjm093">GitHub</a>
+                <a class="dropdown-item" href="https://www.linkedin.com/in/christopher-m-25246649">LinkedIn</a>
+              </div>
             </li>
           <li class="nav-item">
-            <a class="nav-link" href="Assets\portfolio.html">Portfolio</a>
+              <a class="nav-link" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Assets\contact.html">Contact</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
