Added another project link to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                 Links
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Resume</a>
+                <a class="dropdown-item" href="https://drive.google.com/file/d/11iTf6iyLDALqTSP47PmU4QNMtqV-eOKK/view?usp=sharing">Resume</a>
                 <a class="dropdown-item" href="https://github.com/chrisjm093">GitHub</a>
                 <a class="dropdown-item" href="https://www.linkedin.com/in/christopher-m-25246649">LinkedIn</a>
               </div>
@@ -99,13 +99,13 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body"> 
-                <img src="https://via.placeholder.com/400x185" class="card-img" alt="placeholder">
-                <a href="#" class="btn btn-block custom-btn">Info Widget</a>
+                <img src="Assets\images\day-schedulerss.jpg" class="card-img" alt="placeholder">
+                <a href="https://chrisjm093.github.io/Day-Scheduler-App/" class="btn btn-block custom-btn">Day Scheduler</a>
               </div>
             </div>
           </div>
         </div>
-            
+<!--     Placeholder for future portfolio content        
         <div class="row">
           <div class="col-sm-6">
             <div class="card">
@@ -118,7 +118,7 @@
           <div class="col-sm-6">
           </div>
         </div>
-      </div>
+      </div> -->
 
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
