--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 Links
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Resume</a>
+                <a class="dropdown-item" href="https://drive.google.com/file/d/11iTf6iyLDALqTSP47PmU4QNMtqV-eOKK/view?usp=sharing">Resume</a>
                 <a class="dropdown-item" href="https://github.com/chrisjm093">GitHub</a>
                 <a class="dropdown-item" href="https://www.linkedin.com/in/christopher-m-25246649">LinkedIn</a>
               </div>
