Added additional projects to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,18 @@
             </div>
           </div>
         </div>
-
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body"> 
+                <img src="Assets/images/NoteTaker.jpg" class="card-img" alt="placeholder">
+                <a href="https://my-express-note-taker.herokuapp.com/" class="btn btn-block custom-btn">Note Taker</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+          </div>
+        </div>
       </div>
 
 <!--     Placeholder for future portfolio content        
